plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.3.1'
}

group 'com.caijy.plugin'
version "$rootProject.ext.plugin.version"
apply plugin: 'java'
sourceCompatibility = 1.8
jar.enabled = true

repositories {
    mavenCentral()
}

dependencies {
    implementation project(":monitor-agent-core")
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2021.1.3'
    plugins = ['java']
    type.set("IU")
    localPath.set("/Applications/IntelliJ IDEA.app")
    tasks {
        "buildSearchableOptions" {
            enabled = false
        }
    }
}

patchPluginXml {
    patchPluginXml {
        sinceBuild.set("201.1")
        untilBuild.set("")
    }
}

publishPlugin{
    token=System.getenv("pluginToken")
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}


task packIdeaPlugin(type: Copy, dependsOn: build) {

}